# bms_simulator_2026

./: .gitignore  CLAUDE.md  Dockerfile  README.md  arthur.py  docker-compose.yml  example.py  pyproject.toml
.devcontainer/: devcontainer.json
nginx/: nginx.conf
src/bms_simulator/: __main__.py  cli.py  controller.py  server.py
tests/: test_cli.py  test_controller.py  test_hello.py  test_server.py
web/: Dockerfile  index.html  package.json
web/src/: App.vue
web/src/components/: ActuatorSwitch.vue  FloorPlan.vue  PowerDisplay.vue  SensorCard.vue  TimeControl.vue
web/src/composables/: useMqtt.js
